  ! When debugging a Graphics instance not showing all those properties anymore, which are obvious also from the
    regular debug window.
  ! Improving quality, when image is saved in a format that does not support current pixel format. Though this is
    is an improvement the result might not be incompatible with earlier results.
  + Supporting all possible PixelFormats
  + Always allowing to save in Icon format
  + Saving as TIFF allows to save a multi-page image even for animations and icons if compound view is selected.
  - If an indexed bitmap was debugged, then changing a transparent palette entry did not always work properly.

+ KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
+ The DebuggerHelper class have been made public, which provides public access for some debugger visualizers.
- Serialization of a Metafile with WMF format failed in some cases.
- Debugging Bitmaps of rare PixelFormats failed, now all possible formats are supported.

+ KGySoft.Drawing.DebuggerVisualizers.Test.exe
==============================================
+ Providing tests for all possible PixelFormats (applies Bitmap, BitmapData, Graphics, Palette)
+ Bitmap/Metafile/Icon types can be debugged as Image or as their self type (affects replacing while debugging)
+ Also BitmapData and Graphics can be opened directly
- If an image was debugged directly, then after replacing the image and closing the debugger the tester was crashed.
- A Metafile with WMF format was not be able to be opened by the debugger


~~~~~~~~~
! v2.0.0:
~~~~~~~~~

! Assembly names:
=================
! Instead of many separate KGySoft.DebuggerVisualizers.VS<version>.dll files from now on there is one
  KGySoft.Drawing.DebuggerVisualizers.dll for each .NET frameworks.
! KGySoft.DebuggerVisualizers.Common.dll has been renamed to KGySoft.Drawing.ImagingTools.exe, which
  is an executable file now.

! KGySoft.Drawing.ImagingTools.exe
==================================